@@ -7,9 +7,12 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 ## Join us on Discord for active test builds and much more : [Click Here](https://discord.gg/6fHCRKnDc9)
 
 ## v2.10.3.6 Change Log - Release Candidate 3 (rc3) - includes rc1+rc2 changes
+- [add] option to auto turn off the radio when DB manager is requested to help users that have the power button unavailable. (collapsed view, no top tools and use autostart)
 - [fix] history left axis would incorrectly limit min to -100.0 on startup
 - [fix] changed legacy spot telnet connect to use UInt16 (unsigned 16 bit) for port number allowing 0-65535. Previously it used signed 16 bit preventing any port over 32767 from being used
 - [fix] fix crash if web image url is adjusted whilst operational
+- [fix] fixes for filters being reset. Previously filter button box would not update
+- [change] re-worked minimise/restore code for meter containers
 
 ## v2.10.3.6 Change Log - Release Candidate 2 (rc2) - includes rc1 changes
 - [fix] fix missing legacy buttons that happened in rare cases
